--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,18 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="org.rosesquared.calcpad"
-      android:versionCode="2"
-      android:versionName="1.1">
+      android:versionCode="3"
+      android:versionName="1.2">
    <uses-sdk android:minSdkVersion="11" android:targetSdkVersion="15"/>
 
+   <!-- ???: Consider creating a custom keyboard. -->
    <application
          android:label="@string/app_name"
          android:description="@string/app_name"
          android:icon="@drawable/launcher"
          android:theme="@android:style/Theme.Holo.Light"
          android:allowBackup="true">
-      <activity 
+      <activity
             android:name="CalcPad"
+            android:configChanges="orientation|screenSize"
             android:label="@string/app_name">
          <intent-filter>
             <action android:name="android.intent.action.MAIN" />
