--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="org.rosesquared.calcpad"
-      android:versionCode="3"
-      android:versionName="1.2">
+      package="org.rosesquared.expr"
+      android:versionCode="1"
+      android:versionName="1.0">
    <uses-sdk android:minSdkVersion="11" android:targetSdkVersion="15"/>
 
    <!-- ???: Consider creating a custom keyboard. -->
@@ -13,7 +13,7 @@
          android:theme="@android:style/Theme.Holo.Light"
          android:allowBackup="true">
       <activity
-            android:name="CalcPad"
+            android:name="Expr"
             android:configChanges="orientation|screenSize"
             android:label="@string/app_name">
          <intent-filter>
