--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,7 +3,8 @@
       package="org.rosesquared.expr"
       android:versionCode="2"
       android:versionName="1.1">
-   <uses-sdk android:minSdkVersion="10" android:targetSdkVersion="15"/>
+   <uses-sdk android:minSdkVersion="11" android:targetSdkVersion="15"/>
+   <uses-permission android:name="com.android.vending.BILLING"/>
 
    <!-- ???: Consider creating a custom keyboard. -->
    <application
